fix presentation data

--- a/FutureVendWeb/Views/Devices/Details.cshtml
+++ b/FutureVendWeb/Views/Devices/Details.cshtml
@@ -26,19 +26,19 @@
             @Html.DisplayNameFor(model => model.PaymentDevice)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PaymentDevice.Id)
+            @Html.DisplayFor(model => model.PaymentDevice.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.VendingDevice)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VendingDevice.Id)
+            @Html.DisplayFor(model => model.VendingDevice.Model)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Id)
+            @Html.DisplayFor(model => model.Customer.CompanyName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AcceptCard)
