--- a/FutureVendWeb/Views/Devices/Delete.cshtml
+++ b/FutureVendWeb/Views/Devices/Delete.cshtml
@@ -7,6 +7,9 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
+
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 <div>
     <h4>Device</h4>
     <hr />
@@ -27,19 +30,19 @@
             @Html.DisplayNameFor(model => model.PaymentDevice)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PaymentDevice.Id)
+            @Html.DisplayFor(model => model.PaymentDevice.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.VendingDevice)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VendingDevice.Id)
+            @Html.DisplayFor(model => model.VendingDevice.Model)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.Id)
+            @Html.DisplayFor(model => model.Customer.CompanyName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.AcceptCard)
