--- a/FutureVendWeb/Views/Devices/Index.cshtml
+++ b/FutureVendWeb/Views/Devices/Index.cshtml
@@ -13,11 +13,11 @@
 <table class="table">
     <thead>
         <tr>
+            <th>Company Name</th>
             <th>Payment Serial</th>
             <th>Vending Serial</th>
             <th>Payment Name</th>
             <th>Vending Model</th>
-            <th>Customer Name</th>
             <th>Accept Card</th>
             <th>Accept Cash</th>
             <th>Latitude</th>
@@ -29,11 +29,11 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>@item.Customer?.CompanyName</td>
                 <td>@item.PaymentDeviceSerial</td>
                 <td>@item.VendingDeviceSerial</td>
                 <td>@item.PaymentDevice?.Manufacturer</td> 
                 <td>@item.VendingDevice?.Model</td> 
-                <td>@item.Customer?.CompanyName</td> 
                 <td>@item.AcceptCard</td>
                 <td>@item.AcceptCash</td>
                 <td>@item.LocationLat</td>
