--- a/FutureVendWeb/Views/Transactions/Delete.cshtml
+++ b/FutureVendWeb/Views/Transactions/Delete.cshtml
@@ -11,6 +11,12 @@
     <h4>Transaction</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Device.Customer.CompanyName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Device.Customer.CompanyName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
@@ -29,17 +35,17 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CreatedAt)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Device)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Device.PaymentDevice)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Device.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Device.PaymentDevice.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.VendingProduct)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VendingProduct.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.VendingProduct.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PaymentType)
