--- a/FutureVendWeb/Views/Transactions/Details.cshtml
+++ b/FutureVendWeb/Views/Transactions/Details.cshtml
@@ -10,6 +10,12 @@
     <h4>Transaction</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Device.Customer.CompanyName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Device.Customer.CompanyName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
@@ -29,16 +35,16 @@
             @Html.DisplayFor(model => model.CreatedAt)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Device)
+            @Html.DisplayNameFor(model => model.Device.PaymentDevice)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Device.Id)
+            @Html.DisplayFor(model => model.Device.PaymentDevice.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.VendingProduct)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.VendingProduct.Id)
+            @Html.DisplayFor(model => model.VendingProduct.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PaymentType)
