--- a/FutureVendWeb/Views/VendingProducts/Delete.cshtml
+++ b/FutureVendWeb/Views/VendingProducts/Delete.cshtml
@@ -7,6 +7,9 @@
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
+
+@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
 <div>
     <h4>VendingProduct</h4>
     <hr />
