--- a/FutureVendWeb/Views/Devices/Index.cshtml
+++ b/FutureVendWeb/Views/Devices/Index.cshtml
@@ -32,7 +32,7 @@
                 <td>@item.Customer?.CompanyName</td>
                 <td>@item.PaymentDeviceSerial</td>
                 <td>@item.VendingDeviceSerial</td>
-                <td>@item.PaymentDevice?.Manufacturer</td> 
+                <td>@item.PaymentDevice?.Name</td> 
                 <td>@item.VendingDevice?.Model</td> 
                 <td>@item.AcceptCard</td>
                 <td>@item.AcceptCash</td>
