--- a/FutureVendWeb/Views/Shared/_Layout.cshtml
+++ b/FutureVendWeb/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 <body>
     @inject Microsoft.AspNetCore.Identity.UserManager<ApplicationUser> UserManager
 
-    @if (User.Identity.IsAuthenticated) {
+    @if (User.Identity!.IsAuthenticated) {
         <header>
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
                 <div class="container-fluid">
